# mastodon-mcp-server

./: .env.example  .gitignore  AGENTS.md  README.md  mastodon-mcp-server.metainfo.xml  pyproject.toml  requirements.txt  server.html  setup.py
.github/workflows/: deploy_docs.yml
debian/: Jenkinsfile  changelog  control  copyright  mastodon-mcp-server.install  mastodon-mcp-server.manpages  mastodon-mcp-server.metainfo.xml  mastodon-mcp.1  py3dist-overrides  rules
debian/tests/: control  test-help  test-version
debian/upstream/: metadata
docs/mastodon_mcp_server/: index.html  server.html
mastodon_mcp_server/: __init__.py  _mcp.py  server.py
scripts/: generate_docs.sh  inspect_mastodon.py  test_server.py
skills/: SKILL.md
